# Blasteroids

./: .gitignore  README.md  The game.txt  a.out  teste.c
exemploAllegro/: a.out  main.c  makefile
src/: CMakeLists.txt  asteroid.c  asteroid.h  blast.c  blast.h  collisions.c  collisions.h  consts.h  main.c  spaceship.c  spaceship.h
